--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
   </div>
 
-  <script src="./scripts/chalenge-1.js"></script>
+  <!-- <script src="./scripts/chalenge-1.js"></script> -->
+  <script src="./scripts/chalenge-2.js"></script>
+
 </body>
 
 </html>
