--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   </div>
 
   <!-- <script src="./scripts/chalenge-1.js"></script> -->
-  <script src="./scripts/chalenge-2.js"></script>
+  <!-- <script src="./scripts/chalenge-2.js"></script> -->
+  <script src="./scripts/chalenge-3.js"></script>
 
 </body>
 
