feat:challenge 4 ok

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
   <!-- <script src="./scripts/chalenge-1.js"></script> -->
   <!-- <script src="./scripts/chalenge-2.js"></script> -->
-  <script src="./scripts/chalenge-3.js"></script>
+  <!-- <script src="./scripts/chalenge-3.js"></script> -->
+  <script src="./scripts/chalenge-4.js"></script>
+
 
 </body>
 
