--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <!-- <script src="./scripts/chalenge-2.js"></script> -->
   <!-- <script src="./scripts/chalenge-3.js"></script> -->
   <!-- <script src="./scripts/chalenge-4.js"></script> -->
-  <script src="./scripts/chalenge-5.js"></script>
+  <!-- <script src="./scripts/chalenge-5.js"></script> -->
+  <script src="./scripts/chalenge-6.js"></script>
 
 
 
