--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <!-- <script src="./scripts/chalenge-3.js"></script> -->
   <!-- <script src="./scripts/chalenge-4.js"></script> -->
   <!-- <script src="./scripts/chalenge-5.js"></script> -->
-  <script src="./scripts/chalenge-6.js"></script>
+  <!-- <script src="./scripts/chalenge-6.js"></script> -->
+  <script src="./scripts/chalenge-7.js"></script>
+
 
 
 
