--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- <script src="./scripts/chalenge-4.js"></script> -->
   <!-- <script src="./scripts/chalenge-5.js"></script> -->
   <!-- <script src="./scripts/chalenge-6.js"></script> -->
-  <script src="./scripts/chalenge-7.js"></script>
+  <script src="./scripts/challenge-8.js"></script>
 
 
 
